<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity.IndonesiaDataActivity">

    <!-- NestedScrollView -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!-- ConstraintLayout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <!-- Toolbar Costum  -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/Tollbar_GlobalData"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!-- End Toolbar Costum  -->

            <!-- Dekorasi Toolbar Costum  -->
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="90dp"
                android:layout_height="49dp"
                android:layout_marginEnd="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/Tollbar_GlobalData"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_dekor_toolbar" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="46dp"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/Tollbar_GlobalData"
                app:layout_constraintEnd_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/Tollbar_GlobalData"
                app:srcCompat="@drawable/ic_covid_red" />
            <!-- End Dekorasi Toolbar Costum  -->

            <!-- Tombol Kembali  -->
            <ImageView
                android:id="@+id/goBeranda"
                android:layout_width="31dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/Tollbar_GlobalData"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_kembali" />
            <!-- End Tombol Kembali  -->

            <!-- Data Covid Global  -->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/global_cases"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/Tollbar_GlobalData"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.551" />

            <!--  ImageView Data Global  -->
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="394dp"
                android:layout_height="400dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Tollbar_GlobalData"
                app:srcCompat="@drawable/ic_global_maps" />
            <!-- End Global Data  -->

            <!--  Image Show Goole maps  -->
            <ImageView
                android:id="@+id/maps"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toTopOf="@+id/Card_Total_Positif"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_place" />
            <!--  End Image Show Goole maps  -->

            <!--  CardView Data Positif Global  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/Card_Total_Positif"
                android:layout_width="match_parent"
                android:layout_height="123dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:cardBackgroundColor="?attr/colorPrimary"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/TxtPositive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/total_positive"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/people"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/TxtPositive"
                        app:layout_constraintTop_toBottomOf="@+id/GLPositif" />

                    <TextView
                        android:id="@+id/GLPositif"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/TxtPositive"
                        app:layout_constraintTop_toBottomOf="@+id/TxtPositive"
                        tools:text="View Data"/>

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="129dp"
                        android:layout_height="102dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_covid_red" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
            <!--  End CardView Data Positif Global  -->

            <!--  CardView Data Sembuh Global  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/Card_Total_Recover"
                android:layout_width="175dp"
                android:layout_height="150dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="#4CAF50"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toStartOf="@+id/Caer_Total_Death"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Card_Total_Positif">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/TxtRecover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/total_recovered"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/GLRecover"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TxtRecover"
                        tools:text="View Data"/>

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="22dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/people"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/TxtRecover"
                        app:layout_constraintTop_toBottomOf="@+id/GLRecover" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <!--  End CardView Data Sembuh Global  -->

            <!--  CardView Data Meninggal Global  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/Caer_Total_Death"
                android:layout_width="175dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                app:cardBackgroundColor="#F3B600"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/Card_Total_Recover"
                app:layout_constraintTop_toBottomOf="@+id/Card_Total_Positif">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/TxtDeath"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/total_death"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/GLDeath"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TxtDeath"
                        tools:text="View Data"/>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="22dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/people"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/TxtDeath"
                        app:layout_constraintTop_toBottomOf="@+id/GLDeath" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <!--  End ConstraintLayout  -->

            </androidx.cardview.widget.CardView>
            <!--  End CardView Data Meninggal Global  -->

            <!--  TextView Open In Google Maps  -->
            <TextView
                android:id="@+id/google_berita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/open_in_google_maps"
                android:textColor="#756D6D"
                app:layout_constraintBottom_toTopOf="@+id/Card_Total_Positif"
                app:layout_constraintEnd_toStartOf="@+id/maps" />
            <!--  End TextView Open In Google Maps  -->

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- End ConstraintLayout -->

    </androidx.core.widget.NestedScrollView>
    <!-- End NestedScrollView -->

</androidx.constraintlayout.widget.ConstraintLayout>